--- a/web3-blog/package.json
+++ b/web3-blog/package.json
@@ -15,6 +15,7 @@
     "@openzeppelin/contracts": "^4.7.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "chai": "^4.3.6",
+    "easymde": "^2.16.1",
     "easymode": "^1.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
