--- a/mint-and-burn/package.json
+++ b/mint-and-burn/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-simplemde-editor": "^5.0.2",
+    "react-table": "^7.8.0",
     "web3modal": "^1.9.8"
   },
   "devDependencies": {
